# MetaCLIP2-fine-tune

./: .gitignore  README.md  create_metaclip2_dataset.py  main.py  pyproject.toml
